--- a/src/main/resources/application-postgresql.yml
+++ b/src/main/resources/application-postgresql.yml
@@ -12,6 +12,6 @@ spring:
         format_sql: true
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost/DB_LOCAL_DEFAULT
-    username: postgres
-    password: 123456
+    url: ${DB_URL}
+    username: ${DB_USER}
+    password: ${DB_PASS}
